<resources>
    <string name="app_name">UsedFirebase App</string>

    <!--    intro-->
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <!--    Sign Up Activity-->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="sign_in_description_text">Enter your email id and password, to register with us.</string>

<!--    BaseActivity-->
    <string name="tv_dialog_please_wait">Please wait...</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

<!--    Nav-->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

</resources>
